--- a/sass/1-base/_reset.sass
+++ b/sass/1-base/_reset.sass
@@ -7,12 +7,11 @@
   box-sizing: border-box
   list-style: none
   text-decoration: none
-
+html
+  scroll-behavior: smooth
+  
 body
   background-color: variables.$bg-color
-
-p
-  font-size: 1rem
 
 button
   cursor: pointer
