--- a/sass/2-layouts/_sidebar.sass
+++ b/sass/2-layouts/_sidebar.sass
@@ -13,7 +13,8 @@
   display: flex
   flex-direction: column
   align-items: center
-  justify-content: space-evenly
+  justify-content: center
+  gap:3rem
   
   transform: translateX(-100%)
   transition: all 0.5s
@@ -24,11 +25,10 @@
 
 
   ul
-    height: 500px
     display: flex
     flex-direction: column
     align-items: center
-    justify-content: space-between
+    justify-content: center
     li
       a
         font-size: 1.25rem
