--- a/sass/2-layouts/_sidebar.sass
+++ b/sass/2-layouts/_sidebar.sass
@@ -14,8 +14,8 @@
   flex-direction: column
   align-items: center
   justify-content: center
-  gap:3rem
-  
+  gap: 3rem
+
   transform: translateX(-100%)
   transition: all 0.5s
 
@@ -23,12 +23,18 @@
     display: none
     visibility: hidden
 
-
+  a
+    font-family: 'Poppins', sans-serif
+    font-size: 1.25rem
+    font-weight: 700
+    color: variables.$title
   ul
+    height: 350px
     display: flex
     flex-direction: column
     align-items: center
     justify-content: center
+    gap: 5rem
     li
       a
         font-size: 1.25rem
