--- a/sass/2-layouts/_section.sass
+++ b/sass/2-layouts/_section.sass
@@ -16,7 +16,7 @@ main
       flex-direction: row-reverse
       padding: 11rem 10%
       column-gap: 3rem
-    
+
     .text
       display: flex
       flex-direction: column
@@ -46,7 +46,6 @@ main
           font-weight: bold
           color: variables.$primary-color
 
-
       a
         padding: 1.5rem 1.75rem
         border-radius: 8px
@@ -61,7 +60,6 @@ main
 
         &:hover
           filter: brightness(1.1)
-          
 
     .image
       width: auto
@@ -175,6 +173,13 @@ main
     to
       transform: translateX(0)
 
+#service
+  article
+    display: flex
+    flex-direction: column
+    align-items: center
+    gap: 3rem
+    justify-content: center
 .cards
   display: flex
   flex-wrap: wrap
